Added I2C_IOC_Transfer.cs to project Added I2CTransfer() function to I2CPortFS.cs for I2C_RDWR ioctl functions

--- a/Source/RPICSIO.csproj
+++ b/Source/RPICSIO.csproj
@@ -36,6 +36,7 @@
     <Reference Include="Mono.Posix" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="I2C_IOC_Transfer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Port.cs" />
     <Compile Include="PortFS.cs" />
